--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -74,6 +74,9 @@ general {
     # Set this to true to use the old (non-.obj, pre beta18) pylon model
     B:pylonModel.old=false
 
+    # Set this to true to use Shift instead of Ctrl for the inventory lexica botania quick lookup feature.
+    B:quickLookup.useShift=false
+
     # Set this to false to disable the references in the flower tooltips. (You monster D:)
     B:references.enabled=true
 
@@ -137,8 +140,6 @@ shedding {
     I:AlienVillager.lexiconDisplaySize=40
     I:AlienVillager.metadata=0
     I:AlienVillager.rate=-1
-
-    # Configuration of Shedding for Angler
     S:Angler.item=
     I:Angler.lexiconDisplaySize=40
     I:Angler.metadata=0
@@ -197,8 +198,6 @@ shedding {
     I:BiomesOPlenty.Wasp.lexiconDisplaySize=40
     I:BiomesOPlenty.Wasp.metadata=0
     I:BiomesOPlenty.Wasp.rate=-1
-
-    # Configuration of Shedding for Bird
     S:Bird.item=
     I:Bird.lexiconDisplaySize=40
     I:Bird.metadata=0
@@ -237,8 +236,6 @@ shedding {
     I:"BuildCraft|Robotics.bcRobot.lexiconDisplaySize"=40
     I:"BuildCraft|Robotics.bcRobot.metadata"=0
     I:"BuildCraft|Robotics.bcRobot.rate"=-1
-
-    # Configuration of Shedding for Butterfly
     S:Butterfly.item=
     I:Butterfly.lexiconDisplaySize=40
     I:Butterfly.metadata=0
@@ -255,8 +252,6 @@ shedding {
     I:Celebrity.lexiconDisplaySize=40
     I:Celebrity.metadata=0
     I:Celebrity.rate=-1
-
-    # Configuration of Shedding for Centipede
     S:Centipede.item=
     I:Centipede.lexiconDisplaySize=40
     I:Centipede.metadata=0
@@ -291,14 +286,10 @@ shedding {
     I:CreeperBoss.lexiconDisplaySize=40
     I:CreeperBoss.metadata=0
     I:CreeperBoss.rate=-1
-
-    # Configuration of Shedding for Cricket
     S:Cricket.item=
     I:Cricket.lexiconDisplaySize=40
     I:Cricket.metadata=0
     I:Cricket.rate=-1
-
-    # Configuration of Shedding for Duck
     S:Duck.item=
     I:Duck.lexiconDisplaySize=40
     I:Duck.metadata=0
@@ -359,8 +350,6 @@ shedding {
     I:ExtrabiomesXL.scarecrow.lexiconDisplaySize=40
     I:ExtrabiomesXL.scarecrow.metadata=0
     I:ExtrabiomesXL.scarecrow.rate=-1
-
-    # Configuration of Shedding for Fish
     S:Fish.item=
     I:Fish.lexiconDisplaySize=40
     I:Fish.metadata=0
@@ -713,14 +702,10 @@ shedding {
     I:LavaSlime.lexiconDisplaySize=40
     I:LavaSlime.metadata=0
     I:LavaSlime.rate=-1
-
-    # Configuration of Shedding for Lizard
     S:Lizard.item=
     I:Lizard.lexiconDisplaySize=40
     I:Lizard.metadata=0
     I:Lizard.rate=-1
-
-    # Configuration of Shedding for MantaRay
     S:MantaRay.item=
     I:MantaRay.lexiconDisplaySize=40
     I:MantaRay.metadata=0
@@ -754,13 +739,249 @@ shedding {
     I:Monster.metadata=0
     I:Monster.rate=-1
 
-    # Configuration of Shedding for Moth
+    # Configuration of Shedding for MorePlanet.Bearry
+    S:MorePlanet.Bearry.item=
+    I:MorePlanet.Bearry.lexiconDisplaySize=40
+    I:MorePlanet.Bearry.metadata=0
+    I:MorePlanet.Bearry.rate=-1
+
+    # Configuration of Shedding for MorePlanet.Berry
+    S:MorePlanet.Berry.item=
+    I:MorePlanet.Berry.lexiconDisplaySize=40
+    I:MorePlanet.Berry.metadata=0
+    I:MorePlanet.Berry.rate=-1
+
+    # Configuration of Shedding for MorePlanet.CheeseCow
+    S:MorePlanet.CheeseCow.item=
+    I:MorePlanet.CheeseCow.lexiconDisplaySize=40
+    I:MorePlanet.CheeseCow.metadata=0
+    I:MorePlanet.CheeseCow.rate=-1
+
+    # Configuration of Shedding for MorePlanet.CheeseCubeBoss
+    S:MorePlanet.CheeseCubeBoss.item=
+    I:MorePlanet.CheeseCubeBoss.lexiconDisplaySize=40
+    I:MorePlanet.CheeseCubeBoss.metadata=0
+    I:MorePlanet.CheeseCubeBoss.rate=-1
+
+    # Configuration of Shedding for MorePlanet.CheeseSlime
+    S:MorePlanet.CheeseSlime.item=
+    I:MorePlanet.CheeseSlime.lexiconDisplaySize=40
+    I:MorePlanet.CheeseSlime.metadata=0
+    I:MorePlanet.CheeseSlime.rate=-1
+
+    # Configuration of Shedding for MorePlanet.CreamCat
+    S:MorePlanet.CreamCat.item=
+    I:MorePlanet.CreamCat.lexiconDisplaySize=40
+    I:MorePlanet.CreamCat.metadata=0
+    I:MorePlanet.CreamCat.rate=-1
+
+    # Configuration of Shedding for MorePlanet.CreamGolem
+    S:MorePlanet.CreamGolem.item=
+    I:MorePlanet.CreamGolem.lexiconDisplaySize=40
+    I:MorePlanet.CreamGolem.metadata=0
+    I:MorePlanet.CreamGolem.rate=-1
+
+    # Configuration of Shedding for MorePlanet.CreamSlime
+    S:MorePlanet.CreamSlime.item=
+    I:MorePlanet.CreamSlime.lexiconDisplaySize=40
+    I:MorePlanet.CreamSlime.metadata=0
+    I:MorePlanet.CreamSlime.rate=-1
+
+    # Configuration of Shedding for MorePlanet.DionaCreeperBoss
+    S:MorePlanet.DionaCreeperBoss.item=
+    I:MorePlanet.DionaCreeperBoss.lexiconDisplaySize=40
+    I:MorePlanet.DionaCreeperBoss.metadata=0
+    I:MorePlanet.DionaCreeperBoss.rate=-1
+
+    # Configuration of Shedding for MorePlanet.DionaMinionCreeper
+    S:MorePlanet.DionaMinionCreeper.item=
+    I:MorePlanet.DionaMinionCreeper.lexiconDisplaySize=40
+    I:MorePlanet.DionaMinionCreeper.metadata=0
+    I:MorePlanet.DionaMinionCreeper.rate=-1
+
+    # Configuration of Shedding for MorePlanet.DustSludgeling
+    S:MorePlanet.DustSludgeling.item=
+    I:MorePlanet.DustSludgeling.lexiconDisplaySize=40
+    I:MorePlanet.DustSludgeling.metadata=0
+    I:MorePlanet.DustSludgeling.rate=-1
+
+    # Configuration of Shedding for MorePlanet.EuropaCrab
+    S:MorePlanet.EuropaCrab.item=
+    I:MorePlanet.EuropaCrab.lexiconDisplaySize=40
+    I:MorePlanet.EuropaCrab.metadata=0
+    I:MorePlanet.EuropaCrab.rate=-1
+
+    # Configuration of Shedding for MorePlanet.EuropaSquid
+    S:MorePlanet.EuropaSquid.item=
+    I:MorePlanet.EuropaSquid.lexiconDisplaySize=40
+    I:MorePlanet.EuropaSquid.metadata=0
+    I:MorePlanet.EuropaSquid.rate=-1
+
+    # Configuration of Shedding for MorePlanet.EvolvedEnderman
+    S:MorePlanet.EvolvedEnderman.item=
+    I:MorePlanet.EvolvedEnderman.lexiconDisplaySize=40
+    I:MorePlanet.EvolvedEnderman.metadata=0
+    I:MorePlanet.EvolvedEnderman.rate=-1
+
+    # Configuration of Shedding for MorePlanet.EvolvedInfectedSpiderBoss
+    S:MorePlanet.EvolvedInfectedSpiderBoss.item=
+    I:MorePlanet.EvolvedInfectedSpiderBoss.lexiconDisplaySize=40
+    I:MorePlanet.EvolvedInfectedSpiderBoss.metadata=0
+    I:MorePlanet.EvolvedInfectedSpiderBoss.rate=-1
+
+    # Configuration of Shedding for MorePlanet.EvolvedSiriusBlazeBoss
+    S:MorePlanet.EvolvedSiriusBlazeBoss.item=
+    I:MorePlanet.EvolvedSiriusBlazeBoss.lexiconDisplaySize=40
+    I:MorePlanet.EvolvedSiriusBlazeBoss.metadata=0
+    I:MorePlanet.EvolvedSiriusBlazeBoss.rate=-1
+
+    # Configuration of Shedding for MorePlanet.FronosBossTemp
+    S:MorePlanet.FronosBossTemp.item=
+    I:MorePlanet.FronosBossTemp.lexiconDisplaySize=40
+    I:MorePlanet.FronosBossTemp.metadata=0
+    I:MorePlanet.FronosBossTemp.rate=-1
+
+    # Configuration of Shedding for MorePlanet.FronosVillager
+    S:MorePlanet.FronosVillager.item=
+    I:MorePlanet.FronosVillager.lexiconDisplaySize=40
+    I:MorePlanet.FronosVillager.metadata=0
+    I:MorePlanet.FronosVillager.rate=-1
+
+    # Configuration of Shedding for MorePlanet.FrozenSludgeling
+    S:MorePlanet.FrozenSludgeling.item=
+    I:MorePlanet.FrozenSludgeling.lexiconDisplaySize=40
+    I:MorePlanet.FrozenSludgeling.metadata=0
+    I:MorePlanet.FrozenSludgeling.rate=-1
+
+    # Configuration of Shedding for MorePlanet.GiantWorm
+    S:MorePlanet.GiantWorm.item=
+    I:MorePlanet.GiantWorm.lexiconDisplaySize=40
+    I:MorePlanet.GiantWorm.metadata=0
+    I:MorePlanet.GiantWorm.rate=-1
+
+    # Configuration of Shedding for MorePlanet.Grappy
+    S:MorePlanet.Grappy.item=
+    I:MorePlanet.Grappy.lexiconDisplaySize=40
+    I:MorePlanet.Grappy.metadata=0
+    I:MorePlanet.Grappy.rate=-1
+
+    # Configuration of Shedding for MorePlanet.InfectedWorm
+    S:MorePlanet.InfectedWorm.item=
+    I:MorePlanet.InfectedWorm.lexiconDisplaySize=40
+    I:MorePlanet.InfectedWorm.metadata=0
+    I:MorePlanet.InfectedWorm.rate=-1
+
+    # Configuration of Shedding for MorePlanet.InfectedZombie
+    S:MorePlanet.InfectedZombie.item=
+    I:MorePlanet.InfectedZombie.lexiconDisplaySize=40
+    I:MorePlanet.InfectedZombie.metadata=0
+    I:MorePlanet.InfectedZombie.rate=-1
+
+    # Configuration of Shedding for MorePlanet.JellySlime
+    S:MorePlanet.JellySlime.item=
+    I:MorePlanet.JellySlime.lexiconDisplaySize=40
+    I:MorePlanet.JellySlime.metadata=0
+    I:MorePlanet.JellySlime.rate=-1
+
+    # Configuration of Shedding for MorePlanet.Kiwi
+    S:MorePlanet.Kiwi.item=
+    I:MorePlanet.Kiwi.lexiconDisplaySize=40
+    I:MorePlanet.Kiwi.metadata=0
+    I:MorePlanet.Kiwi.rate=-1
+
+    # Configuration of Shedding for MorePlanet.KoentusSludgeling
+    S:MorePlanet.KoentusSludgeling.item=
+    I:MorePlanet.KoentusSludgeling.lexiconDisplaySize=40
+    I:MorePlanet.KoentusSludgeling.metadata=0
+    I:MorePlanet.KoentusSludgeling.rate=-1
+
+    # Configuration of Shedding for MorePlanet.KoentusianVillager
+    S:MorePlanet.KoentusianVillager.item=
+    I:MorePlanet.KoentusianVillager.lexiconDisplaySize=40
+    I:MorePlanet.KoentusianVillager.metadata=0
+    I:MorePlanet.KoentusianVillager.rate=-1
+
+    # Configuration of Shedding for MorePlanet.LemonDuck
+    S:MorePlanet.LemonDuck.item=
+    I:MorePlanet.LemonDuck.lexiconDisplaySize=40
+    I:MorePlanet.LemonDuck.metadata=0
+    I:MorePlanet.LemonDuck.rate=-1
+
+    # Configuration of Shedding for MorePlanet.Marshmallow
+    S:MorePlanet.Marshmallow.item=
+    I:MorePlanet.Marshmallow.lexiconDisplaySize=40
+    I:MorePlanet.Marshmallow.metadata=0
+    I:MorePlanet.Marshmallow.rate=-1
+
+    # Configuration of Shedding for MorePlanet.Melon
+    S:MorePlanet.Melon.item=
+    I:MorePlanet.Melon.lexiconDisplaySize=40
+    I:MorePlanet.Melon.metadata=0
+    I:MorePlanet.Melon.rate=-1
+
+    # Configuration of Shedding for MorePlanet.SiriusBlaze
+    S:MorePlanet.SiriusBlaze.item=
+    I:MorePlanet.SiriusBlaze.lexiconDisplaySize=40
+    I:MorePlanet.SiriusBlaze.metadata=0
+    I:MorePlanet.SiriusBlaze.rate=-1
+
+    # Configuration of Shedding for MorePlanet.SiriusCreeper
+    S:MorePlanet.SiriusCreeper.item=
+    I:MorePlanet.SiriusCreeper.lexiconDisplaySize=40
+    I:MorePlanet.SiriusCreeper.metadata=0
+    I:MorePlanet.SiriusCreeper.rate=-1
+
+    # Configuration of Shedding for MorePlanet.SiriusMagmaCube
+    S:MorePlanet.SiriusMagmaCube.item=
+    I:MorePlanet.SiriusMagmaCube.lexiconDisplaySize=40
+    I:MorePlanet.SiriusMagmaCube.metadata=0
+    I:MorePlanet.SiriusMagmaCube.rate=-1
+
+    # Configuration of Shedding for MorePlanet.SpaceStarfish
+    S:MorePlanet.SpaceStarfish.item=
+    I:MorePlanet.SpaceStarfish.lexiconDisplaySize=40
+    I:MorePlanet.SpaceStarfish.metadata=0
+    I:MorePlanet.SpaceStarfish.rate=-1
+
+    # Configuration of Shedding for MorePlanet.SpaceWolf
+    S:MorePlanet.SpaceWolf.item=
+    I:MorePlanet.SpaceWolf.lexiconDisplaySize=40
+    I:MorePlanet.SpaceWolf.metadata=0
+    I:MorePlanet.SpaceWolf.rate=-1
+
+    # Configuration of Shedding for MorePlanet.StrawberryChicken
+    S:MorePlanet.StrawberryChicken.item=
+    I:MorePlanet.StrawberryChicken.lexiconDisplaySize=40
+    I:MorePlanet.StrawberryChicken.metadata=0
+    I:MorePlanet.StrawberryChicken.rate=-1
+
+    # Configuration of Shedding for MorePlanet.Tomato
+    S:MorePlanet.Tomato.item=
+    I:MorePlanet.Tomato.lexiconDisplaySize=40
+    I:MorePlanet.Tomato.metadata=0
+    I:MorePlanet.Tomato.rate=-1
+
+    # Configuration of Shedding for MorePlanet.VenusianBlaze
+    S:MorePlanet.VenusianBlaze.item=
+    I:MorePlanet.VenusianBlaze.lexiconDisplaySize=40
+    I:MorePlanet.VenusianBlaze.metadata=0
+    I:MorePlanet.VenusianBlaze.rate=-1
+
+    # Configuration of Shedding for MorePlanet.VenusianSlime
+    S:MorePlanet.VenusianSlime.item=
+    I:MorePlanet.VenusianSlime.lexiconDisplaySize=40
+    I:MorePlanet.VenusianSlime.metadata=0
+    I:MorePlanet.VenusianSlime.rate=-1
+
+    # Configuration of Shedding for MorePlanet.VenusianVillager
+    S:MorePlanet.VenusianVillager.item=
+    I:MorePlanet.VenusianVillager.lexiconDisplaySize=40
+    I:MorePlanet.VenusianVillager.metadata=0
+    I:MorePlanet.VenusianVillager.rate=-1
     S:Moth.item=
     I:Moth.lexiconDisplaySize=40
     I:Moth.metadata=0
     I:Moth.rate=-1
-
-    # Configuration of Shedding for Mouse
     S:Mouse.item=
     I:Mouse.lexiconDisplaySize=40
     I:Mouse.metadata=0
@@ -817,14 +1038,10 @@ shedding {
     I:PigZombie.lexiconDisplaySize=40
     I:PigZombie.metadata=0
     I:PigZombie.rate=-1
-
-    # Configuration of Shedding for Pinguin
     S:Pinguin.item=
     I:Pinguin.lexiconDisplaySize=40
     I:Pinguin.metadata=0
     I:Pinguin.rate=-1
-
-    # Configuration of Shedding for Piranha
     S:Piranha.item=
     I:Piranha.lexiconDisplaySize=40
     I:Piranha.metadata=0
@@ -835,8 +1052,6 @@ shedding {
     I:RandomThings.spirit.lexiconDisplaySize=40
     I:RandomThings.spirit.metadata=0
     I:RandomThings.spirit.rate=-1
-
-    # Configuration of Shedding for Shark
     S:Shark.item=
     I:Shark.lexiconDisplaySize=40
     I:Shark.metadata=0
@@ -877,8 +1092,6 @@ shedding {
     I:Sludgeling.lexiconDisplaySize=40
     I:Sludgeling.metadata=0
     I:Sludgeling.rate=-1
-
-    # Configuration of Shedding for Snake
     S:Snake.item=
     I:Snake.lexiconDisplaySize=40
     I:Snake.metadata=0
@@ -1166,6 +1379,12 @@ shedding {
     I:ThaumicHorizons.HorseZombie.metadata=0
     I:ThaumicHorizons.HorseZombie.rate=-1
 
+    # Configuration of Shedding for ThaumicHorizons.LostSoul
+    S:ThaumicHorizons.LostSoul.item=
+    I:ThaumicHorizons.LostSoul.lexiconDisplaySize=40
+    I:ThaumicHorizons.LostSoul.metadata=0
+    I:ThaumicHorizons.LostSoul.rate=-1
+
     # Configuration of Shedding for ThaumicHorizons.LunarWolf
     S:ThaumicHorizons.LunarWolf.item=
     I:ThaumicHorizons.LunarWolf.lexiconDisplaySize=40
@@ -1177,6 +1396,12 @@ shedding {
     I:ThaumicHorizons.MeatSlime.lexiconDisplaySize=40
     I:ThaumicHorizons.MeatSlime.metadata=0
     I:ThaumicHorizons.MeatSlime.rate=-1
+
+    # Configuration of Shedding for ThaumicHorizons.MedSlime
+    S:ThaumicHorizons.MedSlime.item=
+    I:ThaumicHorizons.MedSlime.lexiconDisplaySize=40
+    I:ThaumicHorizons.MedSlime.metadata=0
+    I:ThaumicHorizons.MedSlime.rate=-1
 
     # Configuration of Shedding for ThaumicHorizons.MercurialSlime
     S:ThaumicHorizons.MercurialSlime.item=
@@ -1224,13 +1449,23 @@ shedding {
     I:ThaumicHorizons.SelfShearingSheep.metadata=0
     I:ThaumicHorizons.SelfShearingSheep.rate=-1
 
+    # Configuration of Shedding for ThaumicHorizons.Sheeder
+    S:ThaumicHorizons.Sheeder.item=
+    I:ThaumicHorizons.Sheeder.lexiconDisplaySize=40
+    I:ThaumicHorizons.Sheeder.metadata=0
+    I:ThaumicHorizons.Sheeder.rate=-1
+
     # Configuration of Shedding for ThaumicHorizons.TaintEaterPig
     S:ThaumicHorizons.TaintEaterPig.item=
     I:ThaumicHorizons.TaintEaterPig.lexiconDisplaySize=40
     I:ThaumicHorizons.TaintEaterPig.metadata=0
     I:ThaumicHorizons.TaintEaterPig.rate=-1
 
-    # Configuration of Shedding for TropicalFish
+    # Configuration of Shedding for ThaumicHorizons.VoltSlime
+    S:ThaumicHorizons.VoltSlime.item=
+    I:ThaumicHorizons.VoltSlime.lexiconDisplaySize=40
+    I:ThaumicHorizons.VoltSlime.metadata=0
+    I:ThaumicHorizons.VoltSlime.rate=-1
     S:TropicalFish.item=
     I:TropicalFish.lexiconDisplaySize=40
     I:TropicalFish.metadata=0
@@ -1605,8 +1840,6 @@ shedding {
     I:"Void Monster.lexiconDisplaySize"=40
     I:"Void Monster.metadata"=0
     I:"Void Monster.rate"=-1
-
-    # Configuration of Shedding for Whale
     S:Whale.item=
     I:Whale.lexiconDisplaySize=40
     I:Whale.metadata=0
