--- a/config/IguanaTinkerTweaks/ToolDefaults.cfg
+++ b/config/IguanaTinkerTweaks/ToolDefaults.cfg
@@ -353,6 +353,215 @@ minecraft {
 }
 
 
+moreplanet {
+
+    norium_pickaxe {
+        I:pickaxe=6
+    }
+
+    palladium_pickaxe {
+        I:pickaxe=6
+    }
+
+    sulfur_pickaxe {
+        I:pickaxe=5
+    }
+
+    fronos_rock_pickaxe {
+        I:pickaxe=0
+    }
+
+    quontonium_pickaxe {
+        I:pickaxe=6
+    }
+
+    uranium_pickaxe {
+        I:pickaxe=6
+    }
+
+    white_crystal_pickaxe {
+        I:pickaxe=6
+    }
+
+    ice_crystal_axe {
+        I:axe=6
+    }
+
+    white_crystal_spade {
+        I:shovel=6
+    }
+
+    ice_crystal_shovel {
+        I:shovel=6
+    }
+
+    koentus_meteor_spade {
+        I:shovel=6
+    }
+
+    black_diamond_pickaxe {
+        I:pickaxe=6
+    }
+
+    polongnius_meteor_pickaxe {
+        I:pickaxe=6
+    }
+
+    purple_crystal_axe {
+        I:axe=6
+    }
+
+    fronos_rock_shovel {
+        I:shovel=0
+    }
+
+    fronisium_spade {
+        I:shovel=6
+    }
+
+    ice_crystal_pickaxe {
+        I:pickaxe=6
+    }
+
+    sulfur_axe {
+        I:axe=5
+    }
+
+    fronisium_axe {
+        I:axe=6
+    }
+
+    polongnius_meteor_spade {
+        I:shovel=6
+    }
+
+    frozen_iron_pickaxe {
+        I:pickaxe=6
+    }
+
+    iridium_pickaxe {
+        I:pickaxe=6
+    }
+
+    frozen_iron_axe {
+        I:axe=6
+    }
+
+    candy_axe {
+        I:axe=0
+    }
+
+    red_gem_pickaxe {
+        I:pickaxe=6
+    }
+
+    iridium_spade {
+        I:shovel=6
+    }
+
+    quontonium_axe {
+        I:axe=6
+    }
+
+    red_gem_spade {
+        I:shovel=6
+    }
+
+    fronos_rock_axe {
+        I:axe=0
+    }
+
+    candy_pickaxe {
+        I:pickaxe=0
+    }
+
+    palladium_spade {
+        I:shovel=6
+    }
+
+    purple_crystal_spade {
+        I:shovel=6
+    }
+
+    purple_crystal_pickaxe {
+        I:pickaxe=6
+    }
+
+    frozen_iron_spade {
+        I:shovel=6
+    }
+
+    candy_spade {
+        I:shovel=0
+    }
+
+    koentus_meteor_pickaxe {
+        I:pickaxe=6
+    }
+
+    uranium_axe {
+        I:axe=6
+    }
+
+    black_diamond_axe {
+        I:axe=6
+    }
+
+    black_diamond_spade {
+        I:shovel=6
+    }
+
+    iridium_axe {
+        I:axe=6
+    }
+
+    koentus_meteor_axe {
+        I:axe=6
+    }
+
+    polongnius_meteor_axe {
+        I:axe=6
+    }
+
+    palladium_axe {
+        I:axe=6
+    }
+
+    norium_axe {
+        I:axe=6
+    }
+
+    norium_spade {
+        I:shovel=6
+    }
+
+    fronisium_pickaxe {
+        I:pickaxe=6
+    }
+
+    red_gem_axe {
+        I:axe=6
+    }
+
+    white_crystal_axe {
+        I:axe=6
+    }
+
+    sulfur_shovel {
+        I:shovel=5
+    }
+
+    uranium_spade {
+        I:shovel=6
+    }
+
+    quontonium_spade {
+        I:shovel=6
+    }
+
+}
+
+
 natura {
 
     natura_pickaxe_fusewood {
