--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -37,11 +37,11 @@
     B:"Lamp Noises"=true
     B:"Liquid Ender Effect"=true
     I:"Lumen Relay Range"=16
-    B:"Make Pylon pathfinding attempt shortest path - can be intensive"=true
+    B:"Make Pylon pathfinding attempt shortest path - can be intensive"=false
     B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
-    B:"Pylons Chunkload Selves Once Used"=true
+    B:"Pylons Chunkload Selves Once Used"=false
     I:"Rainbow Forest Animal Density"=6
     I:"Rainbow Forest Biome Weight"=10
     D:"Rainbow Leaf Gold Apple Drop Percentage"=0.25
