--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -70,7 +70,7 @@
     B:"Color Blind Mode"=false
     B:"Conservative Jetpack Firing"=true
     S:"Core Recipe Editing"=X
-    B:"Crafting Table can Make Machines"=false
+    B:"Crafting Table can Make Machines"=true
     I:"Difficulty Control"=2
     B:"Direct Block Damage from Machine Failures"=true
     B:"Disable Automining Machines"=false
