--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -130,13 +130,13 @@ special_ai {
     D:_chance_3=0.2
 
     # (Entity list) List of mobs that can gain special AI patterns (note that the entity must have pathfinding AI enabled). Defaults to any kind of zombie or skeleton.
-    S:_mob_list_1=Zombie,Skeleton
+    S:_mob_list_1=Zombie
 
     # (Entity list) Same as mob_list_1, but uses _chance_2. Defaults to any kind of zombie.
     S:_mob_list_2=Zombie
 
     # (Entity list) Same as mob_list_1, but uses _chance_3. Defaults to any kind of skeleton.
-    S:_mob_list_3=Skeleton
+    S:_mob_list_3=Zombie
     I:ai_barrage=1
     I:ai_charge=1
     I:ai_jump=1
