--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -38,6 +38,7 @@ modules {
     B:"Forestry:power"=true
     B:"Forestry:sapling"=true
     B:Forge=true
+    B:HQM.showQDS=true
     B:Railcraft=true
     B:"Railcraft:charge"=true
     B:"Railcraft:energy"=true
@@ -122,6 +123,7 @@ server_forcing {
     B:"Forestry:power"=false
     B:"Forestry:sapling"=false
     B:Forge=false
+    B:HQM.showQDS=false
     B:Railcraft=false
     B:"Railcraft:charge"=false
     B:"Railcraft:energy"=false
