--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -398,6 +398,8 @@ enchantmentsoulboundweight {
         Thaumcraft:ItemHoeElemental
         Thaumcraft:ItemHoeVoid
         ThermalExpansion:tool.hoeInvar
+		RotaryCraft:rotarycraft_item_steelhoe
+		RotaryCraft:rotarycraft_item_bedhoe
      >
 
     # This setting controls whether mana beans from Thaumcraft can be harvested by the farm.
