--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -79,7 +79,7 @@ general {
     # Disable Tin Ore Gen on Moon.
     B:"Disable Tin Ore Gen on Moon"=false
 
-    # Disable Tin Ore Gen on Moon.
+    # Disable Copper Ore Gen on Moon.
     B:"Disable Copper Ore Gen on Moon"=false
 
     # If true, moon villages will not generate.
@@ -96,22 +96,28 @@ general {
 
     # Enter IDs of other mods' ores here for Galacticraft to generate them on the Moon and other planets. Format is BlockName or BlockName:metadata. Use optional parameters at end of each line: /RARE /UNCOMMON or /COMMON for rarity in a chunk; /DEEP /SHALLOW or /BOTH for height; /SINGLE /STANDARD or /LARGE for clump size; /XTRARANDOM for ores sometimes there sometimes not at all.  /ONLYMOON or /ONLYMARS if wanted on one planet only.  If nothing specified, defaults are /COMMON, /BOTH and /STANDARD.  Repeat lines to generate a huge quantity of ores.
     S:"Other mods ores for GC to generate on the Moon and planets" <
-		ReactorCraft:reactorcraft_block_ore:1 /UNCOMMON /DEEP /STANDARD 
-		ReactorCraft:reactorcraft_block_ore:2 /UNCOMMON /DEEP /STANDARD 
-		ReactorCraft:reactorcraft_block_ore:3 /UNCOMMON /DEEP /STANDARD 
-		ReactorCraft:reactorcraft_block_ore:4 /UNCOMMON /DEEP /STANDARD 
-		ReactorCraft:reactorcraft_block_ore:7 /UNCOMMON /BOTH /LARGE
-		ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
-		ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
-		ReactorCraft:reactorcraft_block_fluoriteore:0 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:1 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:2 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:3 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:4 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:5 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:6 /COMMON /BOTH /STANDARD
-		ReactorCraft:reactorcraft_block_fluoriteore:7 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_ore:1 /UNCOMMON /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:2 /UNCOMMON /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:3 /UNCOMMON /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:4 /UNCOMMON /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:7 /UNCOMMON /BOTH /LARGE
+        ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
+        ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
+        ReactorCraft:reactorcraft_block_fluoriteore:0 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:1 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:2 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:3 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:4 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:5 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:6 /COMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:7 /COMMON /BOTH /STANDARD
      >
+
+    # Set to true to make Galacticraft oil register as oilgc, for backwards compatibility with previously generated worlds.
+    B:"Use legacy oilgc fluid registration"=false
+
+    # Set to true to make Galacticraft fuel register as fuelgc, for backwards compatibility with previously generated worlds.
+    B:"Use legacy fuelgc fluid registration"=false
 
     # If this is enabled, debug messages will appear in the console. This is useful for finding bugs in the mod.
     B:"Enable Debug Messages"=false
@@ -206,6 +212,15 @@ general {
 
     # Set to true to invert the mouse scroll feature on the galaxy map.
     B:"Map Scroll Mouse Invert"=false
+
+    # Set to a value between 0.0 and 1.0 to decrease meteor spawn chance (all dimensions).
+    D:"Meteor Spawn Modifier"=1.0
+
+    # Set to false to stop meteors from breaking blocks on contact.
+    B:"Meteor Block Damage Enabled"=true
+
+    # Update check will not run if this is set to true.
+    B:"Disable Update Check"=false
     S:"Default key for opening fuel levels gui - Useful for modpacks"=KEY_F
     S:"Default key for opening in-game galaxy map - Useful for modpacks"=KEY_M
     S:"Default key to toggle advanced goggles behaviour - Useful for modpacks"=KEY_K
