--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -1,6 +1,71 @@
 # Configuration file
 
+compatability {
+    # Set this to false to disable IE's built in compatability with BackTools
+    B:"Enable Compatmodule: BackTools"=true
+
+    # Set this to false to disable IE's built in compatability with Botania
+    B:"Enable Compatmodule: Botania"=true
+
+    # Set this to false to disable IE's built in compatability with CarpentersBlocks
+    B:"Enable Compatmodule: CarpentersBlocks"=true
+
+    # Set this to false to disable IE's built in compatability with EE3
+    B:"Enable Compatmodule: EE3"=true
+
+    # Set this to false to disable IE's built in compatability with EnderIO
+    B:"Enable Compatmodule: EnderIO"=true
+
+    # Set this to false to disable IE's built in compatability with Forestry
+    B:"Enable Compatmodule: Forestry"=false
+
+    # Set this to false to disable IE's built in compatability with ForgeMicroblock
+    B:"Enable Compatmodule: ForgeMicroblock"=true
+
+    # Set this to false to disable IE's built in compatability with HydCraft
+    B:"Enable Compatmodule: HydCraft"=true
+
+    # Set this to false to disable IE's built in compatability with MineFactoryReloaded
+    B:"Enable Compatmodule: MineFactoryReloaded"=true
+
+    # Set this to false to disable IE's built in compatability with MineTweaker3
+    B:"Enable Compatmodule: MineTweaker3"=true
+
+    # Set this to false to disable IE's built in compatability with ThermalDynamics
+    B:"Enable Compatmodule: ThermalDynamics"=true
+
+    # Set this to false to disable IE's built in compatability with ThermalExpansion
+    B:"Enable Compatmodule: ThermalExpansion"=true
+
+    # Set this to false to disable IE's built in compatability with ThermalFoundation
+    B:"Enable Compatmodule: ThermalFoundation"=true
+
+    # Set this to false to disable IE's built in compatability with Waila
+    B:"Enable Compatmodule: Waila"=true
+
+    # Set this to false to disable IE's built in compatability with chisel
+    B:"Enable Compatmodule: chisel"=true
+
+    # Set this to false to disable IE's built in compatability with denseores
+    B:"Enable Compatmodule: denseores"=true
+
+    # Set this to false to disable IE's built in compatability with etfuturum
+    B:"Enable Compatmodule: etfuturum"=true
+
+    # Set this to false to disable IE's built in compatability with gregtech
+    B:"Enable Compatmodule: gregtech"=true
+
+    # Set this to false to disable IE's built in compatability with harvestcraft
+    B:"Enable Compatmodule: harvestcraft"=true
+
+    # Set this to false to disable IE's built in compatability with steamcraft2
+    B:"Enable Compatmodule: steamcraft2"=true
+}
+
+
 general {
+    # Set this to false to disable tge manual's forced change of GUI scale
+    B:AutoscaleManual=true
     I:"Cable colouration" <
         13926474
         15576418
@@ -22,7 +87,7 @@ general {
     D:"Cable loss" <
         0.05
         0.025
-        0.1
+        0.025
         1.0
         1.0
      >
@@ -61,15 +126,24 @@ general {
     # Increase the distance at which certain TileEntities (specifically windmills) are still visible. This is a modifier, so set it to 1 for default render distance, to 2 for doubled distance and so on.
     B:"Increased Tile Renderdistance"=1.5
 
+    # The last version of IE that was run in this instance. DO NOT CHANGE THIS, IT WILL BREAK THINGS.
+    D:LastVersion=0.61
+
     # A list of preferred Mod IDs that results of IE processes should stem from, aka which mod you want the copper to come from. This affects the ores dug by the excavator, as well as those crushing recipes that don't have associated IE items. This list is in oreder of priority.
     S:"Preferred Ores" <
         ImmersiveEngineering
         ThermalFoundation
      >
+
+    # Set this to false to hide the update news in the manual
+    B:"Show Update News"=true
     B:"Support for colourblind people, gives a text-based output on capacitor sides"=false
 
     # The ID of the texture sheet used for revolvers. This should probably never conflict since not many mods do custom sheets.
     I:"TextureSheet: Revolvers"=94
+
+    # Drop connections with non-existing endpoints when loading the world. Use with care and backups and only when suspecting corrupted data. This option will check and load all connection endpoints and may slow down the world loading process.
+    B:"Validate Connections"=false
 
     # The villager ID for the Engineer Villager. Change if it conflicts
     I:"Villager ID: Engineer"=512
@@ -82,6 +156,15 @@ machines {
 
     # The maximum amount of damage Graphite Electrodes can take. While the furnace is working, electrodes sustain 1 damage per tick, so this is effectively the lifetime in ticks. The default value of 96000 makes them last for 8 consecutive ingame days
     I:"Arc Furnace: Graphite Electrodes"=96000
+
+    # Set this to false to disable the Arc Furnace's recycling of armors and tools
+    B:"Arc Furnace: Recycling"=true
+
+    # The RF the Assembler will consume to craft an item from a recipe
+    I:"Assembler: Consumed"=80
+
+    # The RF the Bottling Machine will consume per tick, when filling items
+    I:"Bottling: Consumed"=8
 
     # The maximum amount of RF that can be input into a high-voltage capacitor (by IE net or other means)
     I:"Capacitor HV: Input"=4096
@@ -143,6 +226,12 @@ machines {
     # The RF per tick per item that the Fermenter will consume to create Ethanol
     I:"Fermenter: Consumed"=10
 
+    # The RF the Fluid Pump will consume pressurize+accellerate fluids, increasing the transferrate
+    I:"Fluid Pump: Acceleration"=5
+
+    # The RF the Fluid Pump will consume to pick up a fluid block in the world
+    I:"Fluid Pump: Consumed"=250
+
     # The RF per tick consumed to add one heat to a furnace. Creates up to 4 heat in the startup time and then 1 heat per tick to keep it running
     I:"Heater: RF per Heat"=8
 
@@ -160,6 +249,13 @@ machines {
 
     # Output modifier for the energy created by the Thermoelectric Generator
     D:"Thermoelectric: Output"=1.0
+
+    # In- and output rates of LV,MV and HV Wire Conenctors. This is independant of the transferrate of the wires.
+    I:"Wire Connector Input" <
+        256
+        1024
+        4096
+     >
 }
 
 
@@ -219,22 +315,25 @@ oregen {
 
 tools {
     # The amount of base damage an ArmorPiercing Cartridge inflicts
-    I:BulletDamage-AP=7
+    D:BulletDamage-AP=10.0
 
     # The amount of base damage a single part of Buckshot inflicts
-    I:BulletDamage-Buck=1
+    D:BulletDamage-Buck=2.0
 
     # The amount of base damage a Casull Cartridge inflicts
-    I:BulletDamage-Casull=7
+    D:BulletDamage-Casull=10.0
 
     # The amount of base damage a DragonsBreath Cartridge inflicts
-    I:BulletDamage-Dragon=4
+    D:BulletDamage-Dragon=3.0
 
     # The amount of base damage a Homing Cartridge inflicts
-    D:BulletDamage-Homing=8.0
+    D:BulletDamage-Homing=10.0
+
+    # The amount of base damage a Phial Cartridge inflicts
+    D:BulletDamage-Potion=1.0
 
     # The amount of damage a silver bullet inflicts
-    D:BulletDamage-Silver=7.0
+    D:BulletDamage-Silver=10.0
 
     # The amount of base damage a Wolfpack Cartridge inflicts
     D:BulletDamage-Wolfpack=6.0
