--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -85,7 +85,7 @@ settings {
     B:BloodMoonRedSky=false
 
     # With which number should the default entity limit be multiplicated on a blood moon
-    I:BloodMoonSpawnLimitMult=3
+    I:BloodMoonSpawnLimitMult=1
 
     # How close can enemys spawn next to the player on a bloodmoon in blocks? (Vanilla=24)
     I:BloodMoonSpawnRange=24
@@ -100,7 +100,7 @@ settings {
     B:BloodmoonRespectGamerule=true
 
     # Should monsters spawned by a bloodmoon vanish at dawn?
-    B:BloodmoonVanish=true
+    B:BloodmoonVanish=false
 
     # Bonemeal particles will appear whenever fertilized dirt boosts the plant
     B:FertilizedDirtGrowthIndicator=false
