--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -60,6 +60,12 @@ experimental {
     # This fixes very fast tools sometimes resulting in ghost blocks, but causes a bit more network traffic. Should be fine in theory.
     B:"Send additional block updates when using AOE tools"=true
     B:"Use new adaptive Smeltery code"=false
+
+    # Entity classes listed here will not drop yellow hearts. The values are the actual class names in lowercase.
+    S:YellowHeartDropBlacklist <
+        entitynpc
+        entitycustomnpc
+     >
 }
 
 
@@ -133,6 +139,8 @@ worldgen {
     I:"Aluminum Underground Density"=6
     I:"Aluminum Underground Max Y"=64
     I:"Aluminum Underground Min Y"=42
+    I:"Ardite Ore Density"=8
+    I:"Cobalt Ore Density"=8
     I:"Cobalt Surface Rarity"=2000
     I:"Copper Bush Density"=2
     I:"Copper Bush Max Y"=60
@@ -153,7 +161,6 @@ worldgen {
     I:"Iron Bush Density"=1
     I:"Iron Bush Rarity"=5
     I:"Iron Surface Rarity"=400
-    I:"Nether Ores Density"=8
     I:"Silver Bush Density"=1
     I:"Slime Island Rarity"=1450
     I:"Tin Bush Density"=2
@@ -172,7 +179,8 @@ worldgen {
     B:"Enable the Tinkers Villager to trade for oreberries"=false
     B:"Generate Aluminum"=false
     B:"Generate Aluminum Bushes"=false
-    B:"Generate Cobalt and Ardite"=true
+    B:"Generate Ardite"=true
+    B:"Generate Cobalt"=true
     B:"Generate Copper"=false
     B:"Generate Copper Bushes"=false
     B:"Generate Essence Bushes"=false
