--- a/config/llibrary.cfg
+++ b/config/llibrary.cfg
@@ -1,6 +1,10 @@
 # Configuration file
 
 general {
+    B:"Threaded Screenshots"=true
+    B:"Tooltip Info"=true
+    S:"Update Type"=Release
+
     # Enable threaded screenshots. Disable this if you experience crashes. (Restart required) [default: true]
     B:threadedScreenshots=true
 }
