--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -8,13 +8,13 @@
 
 global {
     # The acronym of your modpack. [default: LGUI]
-    S:modpackAcronym=REVSB
+    S:modpackAcronym=REVL
 
     # The name of your modpack. [default: LaunchGui]
-    S:modpackName=Revolution: Skyblock
+    S:modpackName=Revolution
 
     # The current version of your modpack [default: 1.7.10-2.0-18]
-    S:modpackVersion=1.7.10-2.0-skyblock
+    S:modpackVersion=1.7.10-1.4.0.0
 }
 
 
@@ -46,7 +46,7 @@ notice {
 
     button {
         # Text to display on info button [default: Information]
-        S:infoButtonText=Revolution: Skyblock Info
+        S:infoButtonText=Revolution: Revolution Info
 
         # URL that the info button sends you to [default: http://tehnut.info]
         S:infoButtonUrl=http://bit.ly/1CLRfNc
@@ -71,7 +71,7 @@ notice {
 
     information {
         # Title to display at the top [default: Important Notice]
-        S:infoTitle=Revolution: Skyblock v1.0.0.0 ALPHA news
+        S:infoTitle=Revolution v1.4.0.0 Breaking News
 
         # URL to pull information from.
         # Use "\n" to define a new line. If the line is still too long, it will split for you.
@@ -81,7 +81,7 @@ notice {
         # %name% - Provides modpackName
         # %version% - Provides modpackVersion
         # %acro% - Provides modpackAcronym [default: ]
-        S:infoUrl=https://gist.githubusercontent.com/Haggle1996/d10b4f8b1c0b72856d92/raw/skyblockNotice.txt
+        S:infoUrl=https://gist.githubusercontent.com/Haggle1996/a28839e0f3f37f83fdb0/raw/revolutionNotice.txt
     }
 
 }
@@ -155,7 +155,7 @@ notice {
         S:startupGuiLines=
 
         # Title of the startup GUI. Shows as yellow text. [default: TITLE]
-        S:startupGuiTitle=Revolution: Skyblock
+        S:startupGuiTitle=Revolution
     }
 
 }
